2005-11-01  Edward Hervey  <edward@fluendo.com>

	* gst/wavenc/gstwavenc.c: (gst_wavenc_stop_file),
	(gst_wavenc_init), (gst_wavenc_event), (gst_wavenc_chain):
	Added proper event handlind, 
	made downstream newsegment event use GST_FORMAT_BYTES (otherwise it's
	ignored),
	and don't set a duration of 0 for buffers otherwise they are discarded
	by GstBaseSink.

	GstWavEnc needs some serious loving, after going through the code I'm
	really wondering how this can stay in -good ...

2005-11-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* check/elements/matroskamux.c: (setup_src_pad), (setup_sink_pad),
	(setup_matroskamux), (check_buffer_data), (GST_START_TEST):
	* gst/matroska/matroska-mux.c: (gst_matroska_mux_finalize),
	(gst_matroska_mux_reset), (gst_matroska_mux_audio_pad_setcaps),
	(gst_matroska_mux_start), (gst_matroska_mux_write_data),
	(gst_matroska_mux_collected):
	  Fix leaks and invalid memory access as reported by valgrind

2005-11-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	Patch by: Michal Benes <michal.benes@xeris.cz>

	* check/Makefile.am:
	* gst/matroska/ebml-write.c: (gst_ebml_write_seek):
	* gst/matroska/matroska-mux.c: (gst_matroska_mux_handle_src_event),
	(gst_matroska_mux_audio_pad_setcaps), (gst_matroska_mux_start):
	  add a unit test for matroskamux
	  fix the bugs that the unit test exposed

2005-11-01  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/autodetect/gstautoaudiosink.c:
	(gst_auto_audio_sink_class_init),
	(gst_auto_audio_sink_change_state):
	* gst/autodetect/gstautovideosink.c:
	(gst_auto_video_sink_class_init),
	(gst_auto_video_sink_change_state):
	  Fix state change function and use GST_DEBUG_FUNCPTR in
	  class_init.

2005-11-01  Josef Zlomek  <josef dot zlomek at xeris dot cz>

	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>

	* gst/matroska/ebml-write.c: (gst_ebml_write_new),
	(gst_ebml_write_reset), (gst_ebml_write_element_new):
	* gst/matroska/ebml-write.h: